Pushing last changes before archiving

--- a/.asset/dockerfile
+++ b/.asset/dockerfile
@@ -1,13 +1,16 @@
-FROM moodlehq/moodle-php-apache:${MOODLE_DOCKER_PHP_VERSION:-8.0}
+ARG MPDK_PHP_VERSION
+FROM moodlehq/moodle-php-apache:${MPDK_PHP_VERSION}${MOODLE_VERSION}${MPDK}
+ARG MOODLE_LINK
 #Set the shell to bash
 SHELL ["/bin/bash", "-c"]
+WORKDIR /var/www/
 RUN apt update
-RUN apt install -y wget unzip zip
+RUN apt install -y wget unzip zip git
 #On slow net python may fail with "libpython3.9-stdlib connection timed out"
 RUN apt install -y python3 || apt install -y python3
 #Install NVM and latest LTS Node
-RUN curl -o - https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
-RUN source ~/.nvm/nvm.sh && nvm install --lts && nvm use --lts
+RUN curl -o - https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+RUN source ~/.nvm/nvm.sh && nvm install --lts && nvm install 16.19.0 && nvm use --lts
 #Install composer
 RUN cd /opt && wget -O composer-setup.php https://getcomposer.org/installer && php composer-setup.php && rm composer-setup.php
 RUN mv /opt/composer.phar /usr/local/bin/composer
@@ -15,5 +18,14 @@ RUN mv /opt/composer.phar /usr/local/bin/composer
 RUN cd /opt && git clone --depth 1 https://github.com/tmuras/moosh.git
 RUN cd /opt/moosh/ && composer update && composer install
 RUN ln -s /opt/moosh/moosh.php /usr/local/bin/moosh
-#Install xdebug (not enabled by default)
+#Install  (and not enable) xdebug
 RUN pecl install xdebug
+#Install Moodle
+RUN wget --quiet -O moodle.zip $MOODLE_LINK
+RUN unzip moodle.zip && rm -fr moodle.zip html && mv moodle html
+WORKDIR /var/www/html
+#Download (and not install) utils plugins
+RUN mkdir -p /opt/mpdk/asset /opt/mpdk/myplugins
+RUN git clone --quiet --depth 1 https://github.com/moodlehq/moodle-local_codechecker.git "/opt/mpdk/assets/codechecker"
+RUN git clone --quiet --depth 1 https://github.com/moodlehq/moodle-local_moodlecheck.git "/opt/mpdk/assets/moodlecheck"
+RUN git clone --quiet --depth 1 https://github.com/mudrd8mz/moodle-tool_pluginskel.git "/opt/mpdk/assets/pluginskel"
